--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,8 +17,8 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+          echo "$SSH_PRIVATE_KEY" > keyfile
+          chmod 600 keyfile
           mkdir -p ~/.ssh
           cp known_hosts ~/.ssh/known_hosts
-          ssh -t -i ~/.ssh/id_rsa ubuntu@ec2-3-147-48-124.us-east-2.compute.amazonaws.com "source ~/deploy.sh"
+          ssh -t -i keyfile ubuntu@ec2-3-147-48-124.us-east-2.compute.amazonaws.com "source ~/deploy.sh"
