--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,7 +18,7 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
           echo "$SSH_PRIVATE_KEY" > keyfile
-          chmod 600 keyfile
+          chmod u+r keyfile
           mkdir -p ~/.ssh
           cp known_hosts ~/.ssh/known_hosts
-          ssh -t -i keyfile ubuntu@ec2-3-147-48-124.us-east-2.compute.amazonaws.com "source ~/deploy.sh"
+          ssh -t -i keyfile ubuntu@ec2-3-147-48-124.us-east-2.compute.amazonaws.com "source ./deploy.sh"
